implemented profile-deletion (api)

--- a/Project/electricity-provider/templates/ui_customer_profile_page.html
+++ b/Project/electricity-provider/templates/ui_customer_profile_page.html
@@ -198,11 +198,11 @@ button:hover {
             var confirmation = confirm("Do you really want to delete your Account?");
             if (confirmation) {
                 $.ajax({
-                    type: 'POST',
+                    type: 'DELETE',
                     url: 'http://localhost:8000/api/v1/delete-profile/',
-                    data: JSON.stringify({
-                        user_id: '{{ user.id }}'
-                    }),
+                    headers:{
+                        'X-CSRFToken': getCookie('csrftoken')
+                    },
                     contentType: 'application/json',
                     dataType: 'json',
                     success: function(data) {
@@ -217,5 +217,21 @@ button:hover {
             }
         });
     });
+
+
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = jQuery.trim(cookies[i]);
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
 </script>
 {% endblock %}
