--- a/Project/electricity-provider/templates/ui_login_page.html
+++ b/Project/electricity-provider/templates/ui_login_page.html
@@ -99,7 +99,7 @@ input[type="submit"]:hover {
 <form id="loginForm" method="POST" action="http://localhost:8000/api/v1/auth/">
     <h2>Login</h2><br>
     {% csrf_token %}
-    <label for="username">Username:</label><br>
+    <label for="username">E-Mail:</label><br>
     <input type="text" id="username" name="username"><br>
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password"><br>
