Anpassung Password Modal

--- a/Project/electricity-provider/templates/ui_customer_profile_page.html
+++ b/Project/electricity-provider/templates/ui_customer_profile_page.html
@@ -156,6 +156,7 @@ button:hover {
         <input type="password" id="modalPassword" name="password"><br>
         <input type="hidden" id="action" name="action">
         <button id="submitPassword">Confirm</button>
+        <div style="margin-top: 10px;"></div>
         <button id="cancelButton">Cancel</button>
     </div>
 </div>
