--- a/Project/electricity-provider/templates/ui_login_page.html
+++ b/Project/electricity-provider/templates/ui_login_page.html
@@ -5,94 +5,30 @@
 Login
 {% endblock %}
 
-{% block custom_css %}
-form {
-    max-width: 400px;
-    margin: 250px auto 0; /* Adjust the first value to move the form down */
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: bold;
-}
-
-input {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 10px;
-    margin-bottom: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-input[type="submit"] {
-    background-color: #4caf50;
-    color: white;
-    cursor: pointer;
-    border: none;
-    padding: 12px 20px;
-    font-size: 16px;
-    border-radius: 4px;
-}
-
-input[type="submit"]:hover {
-    background-color: #45a049;
-}
-
-.header-left {
-    display: flex;
-    align-items: center;
-}
-
-.logo {
-    width: 50px;
-    height: 50px;
-}
-
-.header-right {
-    display: flex;
-    align-items: center;
-}
-
-.nav-item {
-    margin-right: 10px;
-}
-
-.nav-item a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-}
-
-.nav-item a:hover {
-    color: #4caf50;
-}
-{% endblock %}
-
 {% block header_not_logged_in %}
-    <header>
-        <div class="header-left">
-            <a href="/">
-            <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo">
-            </a>
-        </div>
-        <div class="header-right">
-            <div class="nav-item">
-                <a href="/">Home</a>
-            </div>
-            <div class="nav-item">
-                <a href="/pricing/">Pricing</a>
-            </div>
-            <div class="nav-item">
-                <a href="/register/">Registration</a>
-            </div>
-        </div>
-    </header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="/">
+        <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo" style="width: 50px;">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pricing/">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register/">Registration</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 {% endblock %}
 
 {% block body %}
