--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -6,55 +6,35 @@ Login
 
 
 {% block header_logged_in %}
-<<<<<<< HEAD
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="/">
-        <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo" style="width: 50px;">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pricing/">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/customer/">My Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/logout/">Logout</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container">
+    <a class="navbar-brand" href="/">
+      <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo" style="width: 50px;">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pricing/">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/customer/">My Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/profile/">My Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout/">Logout</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-=======
-    <header>
-        <div class="header-left">
-            <a href="/">
-            <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo">
-            </a>
-        </div>
-        <div class="header-right">
-            <div class="nav-item">
-                <a href="/">Home</a>
-            </div>
-            <div class="nav-item">
-                <a href="/customer/">Dashboard</a>
-            </div>
-            <div class="nav-item">
-                <a href="/profile/">My Profile</a>
-            </div>
-            <div class="nav-item">
-                <a href="/logout/">Logout</a>
-            </div>
-        </div>
-    </header>
+  </div>
+</nav>
 {% endblock %}
 
 
@@ -87,5 +67,4 @@ Login
     });
 </script>
 
->>>>>>> 9a12a711f32244ffd8fe00ae8bee3e480cd23e8f
 {% endblock %}
