--- a/Project/electricity-provider/templates/base.html
+++ b/Project/electricity-provider/templates/base.html
@@ -21,6 +21,7 @@
     {% load static %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="{% static 'rest_framework/js/csrf.js' %}"></script>
+    <script src="{% static 'js/api.js' %}"></script>
 
 </head>
 <body>
