--- a/Project/electricity-provider/templates/ui_customer_page.html
+++ b/Project/electricity-provider/templates/ui_customer_page.html
@@ -36,5 +36,52 @@ Login
     </div>
   </nav>
 {% endblock %}
+
+
 {% block body %}
+<div class="d-flex justify-content-center" style="margin-top: 20px;">
+    <button type="button" class="btn btn-primary">Neuen Vertrag anlegen</button>
+</div> 
+
+
+<div class="container" style="margin-top: 20px;">
+    <div class="row">
+        <div class="col align">
+            <div class="card">
+                <div class="card-header d-flex justify-content-between" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <div>Zähler xx</div>
+                    <!-- hier muss die Anzeige hin welchen Status der Zähler hat -->
+                    <div>Tarif</div>
+                    <div>Username</div>
+                </div>
+
+                <div class="collapse" id="collapseExample">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col" style="margin-left: 200px;">
+                                Vetragsinhaber: <br>
+                                Vertragsdauer: <br>
+                                Kosten: <br>
+                                Address: <br><br><br>
+                                Rechnungsadresse: <br><br><br>
+                                Bankdaten: 
+                            </div>
+                            <div class="col">
+                                contract.contract_owner <br>
+                                contract.contract_duration <br>
+                                contract.costs <br>
+                                contract.address <br><br><br>
+                                contract.invoice_address <br><br><br>
+                                contract.bank_data
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    
+</div>
+
+
 {% endblock %}
