--- a/Project/electricity-provider/templates/ui_customer_page.html
+++ b/Project/electricity-provider/templates/ui_customer_page.html
@@ -39,10 +39,6 @@ Login
 
 
 {% block body %}
-<div class="d-flex justify-content-center" style="margin-top: 20px;">
-    <button type="button" class="btn btn-primary">Neuen Vertrag anlegen</button>
-</div> 
-
 
 <div class="container" style="margin-top: 20px;">
     <div class="row">
@@ -51,8 +47,8 @@ Login
                 <div class="card-header d-flex justify-content-between" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                     <div>Zähler xx</div>
                     <!-- hier muss die Anzeige hin welchen Status der Zähler hat -->
-                    <div>Tarif</div>
-                    <div>Username</div>
+                    <div>last_reading</div>
+                    <div>last_reading_date</div>
                 </div>
 
                 <div class="collapse" id="collapseExample">
