ui_new_contract_page Grund-HTML erstellt

--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -55,7 +55,7 @@ Login
       <div class="col align">
           <div class="card">
               <div class="card-header d-flex justify-content-between" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                  <div id="test">Zähler xx</div>
+                  <div>Zähler xx</div>
                   <!-- hier muss die Anzeige hin welchen Status der Zähler hat -->
                   <div>Tarif</div>
                   <div>Username</div>
