--- a/Project/electricity-provider/templates/ui_new_contract_page.html
+++ b/Project/electricity-provider/templates/ui_new_contract_page.html
@@ -66,9 +66,9 @@ Login
               <input type="text" id="last_name" name="last_name" class="mb-md w-100 fixed-height">
               <select class="form-select mb-md w-100" aria-label="Default select example">
                   <option selected>Tarif auswählen</option>
-                  <option value="1">Tarif 1</option>
-                  <option value="2">Tarif 2</option>
-                  <option value="3">Tarif 3</option>
+                  {% for tariff in energy_tariffs%}
+                    <option value="{{ tariff.id }}">{{ tariff.name }}</option>
+                  {% endfor %}
               </select>
           </div>
         </div>
