--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -49,19 +49,19 @@ Login
   <a type="button" class="btn btn-primary" href="/contract/new/">Neuen Vertrag anlegen</a>
 </div> 
 
-
+{% for contract in contracts %}
 <div class="container" style="margin-top: 20px;">
   <div class="row">
       <div class="col align">
           <div class="card">
-              <div class="card-header d-flex justify-content-between" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            <div class="card-header d-flex justify-content-between" data-bs-toggle="collapse" href="#collapseExample{{ forloop.counter }}" role="button" aria-expanded="false" aria-controls="collapseExample{{ forloop.counter }}">
                   <div>Zähler xx</div>
                   <!-- hier muss die Anzeige hin welchen Status der Zähler hat -->
                   <div>Tarif</div>
                   <div>Username</div>
               </div>
 
-              <div class="collapse" id="collapseExample">
+              <div class="collapse" id="collapseExample{{forloop.counter}}">
                   <div class="card-body">
                       <div class="row">
                           <div class="col" style="margin-left: 200px;">
@@ -86,7 +86,7 @@ Login
           </div>
       </div>
   </div>
-  
+  {% endfor %}
 </div>
 
 {% endblock %}
