--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -45,6 +45,20 @@ Login
 
 {% block body %}
 
+<div id="passwordModal" style="display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.4);">
+  <div style="background-color: #fefefe; margin: 15% auto; padding: 20px; border: 1px solid #888; width: 30%;">
+      <h2 id="modalTitle">Confirm Action</h2>
+      <p id="modalMessage"></p>
+      <label for="password">Password:</label><br>
+      <input type="password" id="modalPassword" name="password"><br>
+      <input type="hidden" id="action" name="action">
+      <button id="submitPassword">Confirm</button>
+      <div style="margin-top: 10px;"></div>
+      <button id="cancelButton">Cancel</button>
+  </div>
+</div>
+
+
 <div class="d-flex justify-content-center" style="margin-top: 20px;">
   <a type="button" class="btn btn-primary" href="/contract/new/">Neuen Vertrag anlegen</a>
 </div> 
@@ -59,34 +73,86 @@ Login
                   <!-- hier muss die Anzeige hin welchen Status der Zähler hat -->
                   <div>Tarif</div>
                   <div>Username</div>
-              </div>
+            </div>
 
-              <div class="collapse" id="collapseExample{{forloop.counter}}">
-                  <div class="card-body">
-                      <div class="row">
-                          <div class="col" style="margin-left: 200px;">
-                              Vetragsinhaber: <br>
-                              Vertragsdauer: <br>
-                              Kosten: <br>
-                              Address: <br><br><br>
-                              Rechnungsadresse: <br><br><br>
-                              Bankdaten: 
-                          </div>
-                          <div class="col">
-                              contract.contract_owner <br>
-                              contract.contract_duration <br>
-                              contract.costs <br>
-                              contract.address <br><br><br>
-                              contract.invoice_address <br><br><br>
-                              contract.bank_data
+            <div class="collapse" id="collapseExample{{forloop.counter}}">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col" style="margin-left: 200px;">
+                            Vetragsinhaber: <br>
+                            Vertragsdauer: <br>
+                            Kosten: <br>
+                            Address: <br><br><br>
+                            Rechnungsadresse: <br><br><br>
+                            Bankdaten: 
+                        </div>
+                        <div class="col">
+                            contract.contract_owner <br>
+                            contract.contract_duration <br>
+                            contract.costs <br>
+                            contract.address <br><br><br>
+                            contract.invoice_address <br><br><br>
+                            contract.bank_data
+                      </div> 
+                      <div class="col">
+                        <button type="button" id="cancelContract" data-contract-id="{{ contract.id }}" class="btn btn-danger">Cancel Contract</button>
                       </div>
                   </div>
               </div>
-
           </div>
       </div>
   </div>
   {% endfor %}
 </div>
+
+<script>     
+  $('#cancelContract').on('click', function(event){
+      event.preventDefault();
+      $('#action').val('cancelContract');
+      $('#modalMessage').text('Please enter your password to confirm profile deletion.');
+      $('#passwordModal').show();
+  });
+  
+  $('#submitPassword').on('click', function(event){
+      let password = $('#modalPassword').val();
+      contract_id = $(this).data('contract-id');
+
+      $('#passwordModal').hide();
+
+      if ($('#action').val() === 'cancelContract') {
+        cancelContract(confirmation_password, contract_id)
+      }
+  });
+
+  $('#cancelButton').on('click', function(event){
+      $('#action').val('');
+      $('#modalMessage').text('');
+      $('#passwordModal').hide();
+  });
+
+  function cancelContract(confirmation_password, contract_id){
+      let data = {
+          contract_id: contract_id,
+          confirmation_password: confirmation_password
+      };
+
+      $.ajax({
+          type: 'DELETE',
+          url: 'http://localhost:8000/api/v1/contract/',
+          data: JSON.stringify(data),
+          contentType: 'application/json',
+          dataType: 'json',
+          success: function(data) {
+              // Redirect to the /customer page after successful login
+              window.location.href = "/customer";
+          },
+          error: function(jqXHR, textStatus, errorThrown) {
+              // Display an error message
+              alert('cancelation failed: ' + errorThrown);
+          }
+      });
+  }
+  
+</script>
 
 {% endblock %}
